test/fail/multiplystring.app
// Wrong operand types for operator Mul

application test

section functions

globals {
  function f(i : Int) : Int {
    return i * "test";
  }
}
